// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatCard > renders with all props correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Users</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">1,234</div>
      <!--v-if-->
      <div data-slot="trend" class="flex items-center gap-1 text-xs font-medium mt-1 text-success-500 dark:text-success-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trendIcon" class="shrink-0 text-primary-500 dark:text-primary-400 text-success-500 dark:text-success-400"></svg><span data-slot="trendValue" class="">+5.2%</span></div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with as correctly 1`] = `
"<section data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`StatCard > renders with class correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default w-full">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with color error correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-error-500/10 text-error-500 dark:text-error-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-error-500 dark:text-error-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with color info correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-info-500/10 text-info-500 dark:text-info-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-info-500 dark:text-info-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with color neutral correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-gray-500/10 text-gray-500 dark:text-gray-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-gray-500 dark:text-gray-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with color primary correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with color secondary correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-secondary-500/10 text-secondary-500 dark:text-secondary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-secondary-500 dark:text-secondary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with color success correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-success-500/10 text-success-500 dark:text-success-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-success-500 dark:text-success-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with color warning correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-warning-500/10 text-warning-500 dark:text-warning-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-warning-500 dark:text-warning-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with icon correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with icon slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400">⭐</div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with size lg correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-12 p-2.5 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-6 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-base text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-4xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with size md correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with size sm correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-9 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-4 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-2xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with size xl correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-14 p-3 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-7 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-base text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-5xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with size xs correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-8 p-1.5 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-4 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-xs text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with title correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <!--v-if-->
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Total Users</div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with title slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Custom Title</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with trend down correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <!--v-if-->
    <div data-slot="content" class="flex-1 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-slot="trend" class="flex items-center gap-1 text-xs font-medium mt-1 text-error-500 dark:text-error-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trendIcon" class="shrink-0 text-primary-500 dark:text-primary-400 text-error-500 dark:text-error-400"></svg><span data-slot="trendValue" class="">+8.2%</span></div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with trend slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <div data-slot="trend" class="flex items-center gap-1 text-xs font-medium mt-1">Custom Trend</div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with trend up correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <!--v-if-->
    <div data-slot="content" class="flex-1 min-w-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div data-slot="trend" class="flex items-center gap-1 text-xs font-medium mt-1 text-success-500 dark:text-success-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="trendIcon" class="shrink-0 text-primary-500 dark:text-primary-400 text-success-500 dark:text-success-400"></svg><span data-slot="trendValue" class="">+12.5%</span></div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with ui correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default p-4">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with value correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <!--v-if-->
    <div data-slot="content" class="flex-1 min-w-0">
      <!--v-if-->
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">12,345</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with value number correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <!--v-if-->
    <div data-slot="content" class="flex-1 min-w-0">
      <!--v-if-->
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">12345</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with value slot correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">Custom Value</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with variant ghost correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with variant naked correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between">
  <div data-slot="header" class="flex items-start gap-4 p-0 sm:p-0">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with variant outline correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-default ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-muted">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with variant soft correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-elevated/50">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-toned">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with variant solid correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-inverted text-inverted">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-dimmed">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-inverted">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`StatCard > renders with variant subtle correctly 1`] = `
"<div data-slot="root" class="rounded-lg overflow-hidden flex flex-col justify-between bg-elevated/50 ring ring-default">
  <div data-slot="header" class="flex items-start gap-4 p-4 sm:p-6">
    <div data-slot="icon" class="flex items-center justify-center shrink-0 rounded-lg size-10 p-2 bg-primary-500/10 text-primary-500 dark:text-primary-400"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="iconIcon" class="size-5 text-primary-500 dark:text-primary-400"></svg></div>
    <div data-slot="content" class="flex-1 min-w-0">
      <div data-slot="title" class="font-medium text-sm text-toned">Test</div>
      <div data-slot="value" class="font-semibold mt-1 text-3xl text-default">123</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
